# keystone-mcp

./: .gitignore  CHANGELOG.md  FEATURE_PARITY_PLAN.md  PLAN.md  README.md  index.html  pyproject.toml
.keystone/: context.yaml
.keystone/context/: coding-standards.md  deploy-policy.md  owners.md  release-playbook.md
src/keystone_mcp/: budget.py  cache.py  cascade.py  config.py  errors.py  harness_scaffold.py  patches.py  payload.py  prompts.py  resolver.py  server.py  verify.py
src/keystone_mcp/adapters/: _classify.py  base.py  confluence.py  folder.py  github.py  harness.py  jira.py  linear.py  markdown.py  notion.py  repo.py  slack.py
src/keystone_mcp/templates/: __init__.py
src/keystone_mcp/templates/harness/: README.md
src/keystone_mcp/templates/harness/actions/: audit.md  implement.md  learn.md  orient.md  release.md  review.md  spec.md  verify.md
src/keystone_mcp/templates/harness/corpus/state/: CODEBASE_STATE.md  code-debt.md  quality-radar.md  risk-fingerprints.md  traffic-topology.md
src/keystone_mcp/templates/harness/learning/: wishlist.md
src/keystone_mcp/templates/harness/playbooks/: audit.md  bootstrap.md  doctor.md  install.md  learn.md  patch.md  release.md  task.md  verify.md
src/keystone_mcp/templates/harness/prompts/: accessibility-review.md  code-review.md  performance-review.md  security-review.md
src/keystone_mcp/templates/harness/scripts/: build.sh  coverage.sh  drift.sh  lint.sh  test.sh  type.sh
src/keystone_mcp/templates/harness/sensors/: accessibility-review.md  build.md  code-review.md  coverage.md  drift.md  lint.md  performance-review.md  security-review.md  test.md  type.md
src/keystone_mcp/templates/harness/skills/keystone-archive/: SKILL.md
src/keystone_mcp/templates/harness/skills/keystone-budget-reporter/: SKILL.md
src/keystone_mcp/templates/harness/skills/keystone-reload-notice/: SKILL.md
src/keystone_mcp/templates/harness/skills/keystone-sensor-runner/: SKILL.md
src/keystone_mcp/templates/harness/skills/keystone-source-installer/: SKILL.md
tests/: test_budget.py  test_cache.py  test_cascade.py  test_config.py  test_edit_path_triad.py  test_harness_scaffold.py  test_namespace.py  test_patches.py  test_payload.py  test_prompts.py  test_resolver.py  test_verify.py
tests/adapters/: test_classify.py  test_confluence.py  test_folder.py  test_github.py  test_harness.py  test_jira.py  test_linear.py  test_markdown.py  test_notion.py  test_repo.py  test_slack.py
