[project]
name = "keystone-mcp"
version = "0.1.0"
description = "Context broker MCP server — retrieves rules, reasoning, skills, and commands from company resources (markdown, GitHub, Confluence, Notion, Jira, Linear, Slack) via repo-owned topic configuration."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Ian Johnson", email = "ian@parentoleave.com" },
]
license = { text = "MIT" }
keywords = [
    "mcp",
    "fastmcp",
    "agent",
    "context",
    "rules",
    "harness",
    "claude",
    "claude-code",
    "broker",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "pyyaml>=6.0.2",
]

[project.scripts]
keystone-mcp = "keystone_mcp.server:main"

[project.urls]
Homepage = "https://github.com/tacoda/keystone-mcp"
Repository = "https://github.com/tacoda/keystone-mcp"
Issues = "https://github.com/tacoda/keystone-mcp/issues"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.1",
    "build>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/keystone_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "src/keystone_mcp",
    "README.md",
    "PLAN.md",
    "LICENSE",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
